# rust-axum

./: .gitignore  Cargo.toml  config.json
site/: index.html
sqlx/: docker-compose.yml
src/: application_state.rs  main.rs  server_serve.rs  settings.rs
src/api/: mod.rs  v1.rs
src/api/handlers/: hello.rs  user.rs
src/services/: model.rs  user.rs
