[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
config = "0.15.9"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
sqlx = { version = "0.8.3", features = [ "mysql", "runtime-tokio", 
 "tls-rustls", "macros", "time" ] }
chrono = { version = "0.4.40", features = ["serde"] }
arc-swap = "1.7.1"
axum-macros = "0.5.0"
time = "0.3.39"
